--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# unnecessary boilerplate and files created by vs
+packages
+.vs
+ImagesProcessing/Areas
+ImagesProcessing/bin
+ImagesProcessing/obj
