--- a/ImagesProcessing/ImagesProcessing.csproj
+++ b/ImagesProcessing/ImagesProcessing.csproj
@@ -184,12 +184,17 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PhotosController.cs" />
+    <Compile Include="Formatters\PhotoJpegFormatter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Migrations\201705241959033_Init.cs" />
     <Compile Include="Migrations\201705241959033_Init.Designer.cs">
       <DependentUpon>201705241959033_Init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705260512467_UpdatedPhotoModelWithByteArray.cs" />
+    <Compile Include="Migrations\201705260512467_UpdatedPhotoModelWithByteArray.Designer.cs">
+      <DependentUpon>201705260512467_UpdatedPhotoModelWithByteArray.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Algorithm.cs" />
@@ -256,6 +261,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -276,6 +282,9 @@
     <EmbeddedResource Include="Migrations\201705241959033_Init.resx">
       <DependentUpon>201705241959033_Init.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705260512467_UpdatedPhotoModelWithByteArray.resx">
+      <DependentUpon>201705260512467_UpdatedPhotoModelWithByteArray.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -295,7 +304,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>55181</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:55181/</IISUrl>
+          <IISUrl>http://localhost:50000/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
